force-app/main/default/objects/Cultivation_Tax_Receipt_Line__c/Cultivation_Tax_Receipt_Line__c.object-meta.xml
<CustomObject>
    <label>Cultivation Tax Receipt Line</label>
    <nameField>
        <displayFormat>CTRL-{0000000000}</displayFormat>
        <label>CTR Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cultivation Tax Receipt Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>