force-app/main/default/objects/Cultivation_Tax_Receipt_Line__c/fields/Cannabis_Weight__c.field-meta.xml
<CustomField>
    <fullName>Cannabis_Weight__c</fullName>
    <formula>Product_Name__r.Cannabis_Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cannabis Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>