force-app/main/default/objects/Cultivation_Tax_Receipt_Line__c/fields/Cultivation_Tax_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Cultivation_Tax_Receipt__c</fullName>
    <label>Cultivation Tax Receipt</label>
    <referenceTo>Cultivation_Tax_Receipt__c</referenceTo>
    <relationshipLabel>Cultivation Tax Receipt Lines</relationshipLabel>
    <relationshipName>Cultivation_Tax_Receipt_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>