force-app/main/default/objects/Cultivation_Tax_Receipt_Line__c/fields/Line_Total_CT_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Total_CT_Amount__c</fullName>
    <label>Line Total CT Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>