force-app/main/default/objects/Cultivation_Tax_Receipt_Line__c/fields/Qty_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Qty_Ordered__c</fullName>
    <label>Qty Ordered</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>