force-app/main/default/objects/Cultivation_Tax_Receipt_Line__c/fields/Shipping_Manifest_Line__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Manifest_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Manifest Line</label>
    <referenceTo>Shipping_Manifest_Line__c</referenceTo>
    <relationshipLabel>Cultivation Tax Receipt Lines</relationshipLabel>
    <relationshipName>Cultivation_Tax_Receipt_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>