force-app/main/default/objects/Cultivation_Tax_Receipt_Line__c/fields/Unit_CT_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unit_CT_Amount__c</fullName>
    <formula>Product_Name__r.Cultivation_Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit CT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>